src/test/ui/feature-gates/feature-gate-unboxed-closures-method-calls.rs
#![allow(dead_code)]

fn foo<F: Fn()>(mut f: F) {
    f.call(()); //~ ERROR use of unstable library feature 'fn_traits'
    f.call_mut(()); //~ ERROR use of unstable library feature 'fn_traits'
    f.call_once(()); //~ ERROR use of unstable library feature 'fn_traits'
}

fn main() {}
